fixed spacing in paragraphs, now to add the fonts and some color to the sections

--- a/wa/project/project.css
+++ b/wa/project/project.css
@@ -173,6 +173,9 @@ background-size: 300% 100%;
   /* border: 1px solid blue; */
   grid-column: 3/span 2;
   grid-row:2/ span 2;
+  margin:10px;
+ margin-top:0;
+ 
  }
  .rep-size{
   font-size:1.4em;
